# YggdraSIM

./: .claudeignore  .cursorignore  .cursorrules  .dockerignore  .gitignore  .pytest_baseline.txt  AGENTS.md  ARCHITECTURE.md  AUTHORS  Application_dossier.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CLI_AND_PIPING_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUI_REFACTOR_PLAN.md  LICENSE  MANIFEST.in  NOTICE  PROFILE_LIFECYCLE_CLI_CHEATSHEET.md  README.md  SECURITY.md  SIMCARD_V1_REVIEW.md  V1_RELEASE_AUDIT.md  V2_ROADMAP.md  V2_UNIVERSAL_GUI_PLAN.md  cert1.pem  combined_report.yaml  mkdocs.oneot.yml  mkdocs.yml  pyproject.toml  pysim_link  requirements-docs.txt  requirements.txt  yggdrasim.spec  yggdrasim_main.spec
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_CONTROLS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: build.yml  deploy-pages.yml  docker.yml  issue-approval.yml  pr-require-approved-issue.yml
SCP03/: aid.txt  binds.json  config.py  fids.txt  keys.ini  main.py  script.txt
SCP03/core/: cap.py  decoders.py  utils.py
SCP03/crypto/: scp02_session.py  session.py
SCP03/interface/: __init__.py  commands.py  custom_binds.py  guides.py  help_menu.py  shell.py  shell_wizards.py  stk_shell.py  wizards.py  wizards_ui.py
SCP03/logic/: euicc_info2.py  fs.py  gp.py  profile_snapshot_diff.py  profile_validator.py  security.py  sgp22.py  sgp32_decode.py  stk.py
SCP03/seeds/: README.md  aid.txt  fids.txt  keys.ini
SCP03/transport/: card.py
SCP11/: CERT.DPauth.ECDSA.der  CERT.DPpb.ECDSA.der  README.md  TEST_MATERIAL_NOTICE.md  __init__.py  __main__.py  asn1_registry.py  check_keys.py  config.py  console.py  crypto_engine.py  eim_packages.py  es9_client.py  factory.py  main.py  models.py  orchestrator.py  payload_builder.py  providers.py  pysim_path.py  pysim_support.py  sgp_utils.py  transport.py
SCP11/SGP.26_test_Certs/: tree.txt
SCP11/eim_local/: FIRST_TEST_SETUP.md  GUIDE.md  README.md  __init__.py  __main__.py  config.py  dryrun_commands.md  eim_cert_store.py  eim_identity.json  eim_package_codec.py  identity.py  ipad_standalone.py  main.py  models.py  poll_audit_store.py  polling_bridge.py  response_logger.py  runtime_state.py  session.py
SCP11/live/: README.md  asn1_registry.py  config.py  console.py  crypto_engine.py  eim_packages.py  es9_client.py  factory.py  main.py  models.py  orchestrator.py  payload_builder.py  providers.py  pysim_support.py  stk_polling.py  transport.py
SCP11/local_access/: README.md  __init__.py  __main__.py  cert_store.py  config.py  main.py  metadata_codec.py  payload_diff.py  session.py
SCP11/relay/: README.md  __init__.py  __main__.py  config.py  console.py  eim_packages.py  es9_client.py  factory.py  (+4 more)
SCP80/: __init__.py  builder.py  cli.py  config.py  crypto.py  main.py  ota_config.ini  transport.py  utils.py
SIMCARD/: __init__.py  aka_5g.py  akma.py  auth.py  bsp.py  connection.py  eim_identity_template.json  engine.py  etsi_fs.py  euicc_store.py  gp.py  identity.py  ipa_poll_dns.py  ipa_tls.py  isdr_config.py  isdr_config_template.json  naa.py  profile_import.py  profile_store.py  quirks.py  saip_profile.py  saip_pysim_specs.py  scp03.py  scp80.py  sgp.py  sgp32_packages.py  sim_quirks_template.py  state.py  suci.py  toolkit.py  tuak.py  utils.py
Tools/: __init__.py
github-pages/: architecture.html  build-and-packaging.html  getting-started.html  index.html  operator-surfaces.html  reference.html  tailwind.config.js  tailwind.css  ygg-layout.js  ygg-mermaid.js  ygg.css  ygg.js
gui_frontend/: README.md
guides/: AGENT_SECURE_ELEMENT.md  ARCHITECTURE.md  BUILD_AND_PACKAGING.md  CAPABILITIES.md  CARD_BRIDGE_GUIDE.md  CLI_AND_PIPING_GUIDE.md  CONFIGURATION_AND_CERTIFICATES.md  DIAGNOSTICS_TOOLBOX.md  GUI_HOST_SHELL_GUIDE.md  HIL_BRIDGE_GUIDE.md  INSTALL_CLEAN.md  INSTALL_FROM_SOURCE.md  INSTALL_FULL.md  INSTALL_RASPBERRYPI.md  NAMING_CONVENTIONS.md  PROFILE_LIFECYCLE_CLI_CHEATSHEET.md  README.md  SIMTRACE2_CARDEM_GUIDE.md  TEMPLATE_AND_TOKENS.md
main/: __init__.py  env_flags_ui.py  gui.py  main.py  web_server.py
plugins/: .gitignore  README.md
reports/: eim_simulator_readiness_handoff_2026-03-19.md
scripts/: _split_css.py  _split_js.py  build_gui_frontend.sh  convert_tel_docs.py
site-docs/: architecture.md  build-and-packaging.md  documentation-map.md  getting-started.md  index.md  operator-surfaces.md  source-library.md
tests/: conftest.py  test_about_version.py  test_apdu_fuzzer.py  test_apdu_recorder_and_stream.py  test_apdu_relay_service.py  test_asn1_tlv_decode.py  test_asn1_tlv_gui_decoder_output.py  test_bpp_segmentation_annex_m.py  test_bsp_crypto.py  test_card_backend_relay_token.py  test_card_backend_utils.py  test_card_bridge_auth.py  test_card_bridge_server.py  test_cli_batch_entrypoints.py  test_command_batch_dispatch.py  test_command_surface_individual_dispatch.py  test_console_scripts_guard.py  test_device_inventory.py  test_doctor.py  test_doctor_card_relay_probe.py  test_env_flags.py  test_env_flags_gui_route.py  test_euicc_info2_decoders.py  test_euicc_issuer.py  test_eum_diag.py  test_flavor.py  test_fs_controller_static.py  test_gp_manager_extended.py  test_gp_manager_utils.py  test_gui_about_guides.py  test_gui_actions.py  test_gui_akma_actions.py  test_gui_at_decoder.py  test_gui_card_bridge_actions.py  test_gui_card_bridge_actions_http.py  test_gui_config.py  test_gui_esim_nested_nav.py  test_gui_fs_explorer.py  test_gui_fs_tree_kind_and_height.py  test_gui_generic_stage_edit.py  (+352 more)
yggdrasim_common/: __about__.py  __init__.py  apdu_recorder.py  card_backend.py  card_bridge_auth.py  console_scripts.py  device_inventory.py  doctor.py  env_flags.py  env_flags_ui.py  euicc_issuer.py  flavor.py  hil_bridge_runtime.py  inventory_crypto.py  nord_palette.py  plugin_runtime.py  polling_plugin_support.py  process_debug.py  progress.py  quit_control.py  registry.py  remote_card_args.py  runtime_paths.py  session_recording.py  structured_output.py  terminal_output.py
(+781 files in other folders)
