[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasim"
version = "1.0.2"
description = "YggdraSIM secure-element, eUICC, OTA, and SAIP toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Hampus Hellsberg" },
]
maintainers = [
    { name = "1oT OÜ" },
    { name = "Hampus Hellsberg" },
]
keywords = [
    "sim",
    "euicc",
    "esim",
    "uicc",
    "smartcard",
    "globalplatform",
    "scp03",
    "scp11",
    "scp80",
    "saip",
    "sgp22",
    "sgp32",
    "iso7816",
    "etsi",
    "3gpp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
# Core dependencies are kept cross-platform. Linux-only packages and the
# HIL bridge runtime live under optional extras so Windows, macOS, and
# Raspberry Pi installs stay lean. See guides/INSTALL_CLEAN.md and
# guides/INSTALL_FULL.md for the two supported bundling paths.
dependencies = [
    "pyscard",
    "cryptography",
    "pycryptodome",
    "pycryptodomex",
    "pyserial",
    "pytlv",
    "asn1crypto",
    "asn1tools",
    "jsonpath-ng",
    "construct>=2.10.70",
    "bidict",
    "pyosmocom>=0.0.12",
    "cmd2>=2.6.2,<3.0",
    "termcolor",
    "colorlog",
    "packaging",
    "pyyaml",
    "textual>=0.47.0",
    "dnspython>=2.4",
    # pySim is the upstream Osmocom SCP / OTA / SAIP toolkit. SCP03
    # session-key derivation (GPC v2.3 Amd D §4.1.5) and SCP80 / 03.48
    # cipher and CC primitives delegate to it so spec-citation lineage
    # for the cryptographic primitives lives upstream. The wire-format
    # helpers (``Scp03Session.wrap_apdu`` / ``CryptoEngine.build_*``)
    # remain YggdraSIM-specific — see tests/test_scp03_pysim_parity.py
    # and tests/test_scp80_pysim_parity.py for the pinned divergences.
    # Upstream does not publish wheels to PyPI, so we install the git
    # tree directly. The ``saip`` extra is preserved as a no-op alias
    # for back-compat with onboarding scripts that still reference it.
    "pySim @ git+https://github.com/osmocom/pysim.git",
]

[project.optional-dependencies]
# Adds the hardware-in-the-loop bridge dependency stack. pyudev only has
# Linux wheels, so we gate it by platform to keep Windows / macOS installs
# from failing even when the extra is requested accidentally.
hil = [
    "pyudev; sys_platform == 'linux'",
]
# Packaging-side tools used when building the bundled executable.
build = [
    "pyinstaller",
]
# Test-only dependencies. ``pytest`` is the runner for the in-tree
# unit / integration suite under ``tests/``.
test = [
    "pytest",
]
# Legacy alias kept for backwards compatibility with earlier onboarding
# scripts that call ``pip install -e '.[dev]'``.
dev = [
    "pyinstaller",
    "pytest",
]
# Documentation-site tooling. Mirrors ``requirements-docs.txt`` so
# ``pip install yggdrasim[docs]`` alone is sufficient for running
# ``mkdocs build``/``mkdocs serve`` from a fresh checkout.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "pymdown-extensions>=10.13",
]
# ``saip`` is preserved as an empty back-compat alias. pySim moved
# into the base dependency block once SCP03 / SCP80 began routing
# their KDF and cipher primitives through it, so onboarding scripts
# that still reference ``pip install 'yggdrasim[saip]'`` keep
# working without pulling anything new.
saip = []
# ``full`` is the HIL-capable development profile: everything the
# maintainer needs on a Linux box to run, build, and test the suite.
# ``full`` now includes the SAIP surface so a single ``pip install
# 'yggdrasim[full]'`` leaves nothing optional to chase afterwards.
full = [
    "pyudev; sys_platform == 'linux'",
    "pyinstaller",
    "pytest",
]

[project.scripts]
yggdrasim-scp03 = "yggdrasim_common.console_scripts:scp03"
yggdrasim-scp80 = "yggdrasim_common.console_scripts:scp80"
yggdrasim-scp11 = "yggdrasim_common.console_scripts:scp11"
yggdrasim-scp11-live = "yggdrasim_common.console_scripts:scp11_live"
yggdrasim-scp11-test = "yggdrasim_common.console_scripts:scp11_test"
yggdrasim-scp11-relay = "yggdrasim_common.console_scripts:scp11_relay"
yggdrasim-scp11-local-access = "yggdrasim_common.console_scripts:scp11_local_access"
yggdrasim-scp11-eim-local = "yggdrasim_common.console_scripts:scp11_eim_local"
yggdrasim-hil-bridge = "yggdrasim_common.console_scripts:hil_bridge"
yggdrasim-hil-supervisor = "yggdrasim_common.console_scripts:hil_bridge_supervisor"
yggdrasim-profile-package = "yggdrasim_common.console_scripts:profile_package"
yggdrasim-suci-tool = "yggdrasim_common.console_scripts:suci_tool"
yggdrasim-profile-autoload = "yggdrasim_common.console_scripts:profile_autoload"
yggdrasim-apdu-fuzzer = "yggdrasim_common.console_scripts:apdu_fuzzer"
yggdrasim-eum-diag = "yggdrasim_common.console_scripts:eum_diag"

[project.urls]
Homepage = "https://github.com/1oT/YggdraSIM"
Documentation = "https://github.com/1oT/YggdraSIM/tree/main/guides"
Repository = "https://github.com/1oT/YggdraSIM"
Issues = "https://github.com/1oT/YggdraSIM/issues"
Changelog = "https://github.com/1oT/YggdraSIM/blob/main/V1_RELEASE_AUDIT.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# The HIL bridge ships a vendored copy of the RSPRO schema so that an
# installed wheel (``pip install yggdrasim``) can load it even when the
# source tree's ``docs/`` folder is not on disk. The canonical copy
# lives in ``docs/RSPRO.asn``; ``Tools/HilBridge/RSPRO.asn`` is a mirror
# that is ``cp``-refreshed from it as part of the release procedure.
"Tools.HilBridge" = ["RSPRO.asn"]
# The EUM diagnostics dissector is a Lua script that tshark loads at
# runtime via ``-X lua_script:...``. Shipping it as package-data means
# the wheel can resolve its location via ``importlib.resources`` even
# when the source tree is not on disk.
"Tools.EumDiag" = ["dissector.lua"]

[tool.black]
# Canonical formatter target for the "style only" sweep flagged by audit
# item SCP03-P1-03 (and the sibling SCP80-P1-04 / MAIN-P1-03 requests to
# run the same pass across SCP80/ and main/). Line length matches the
# project's historical cap; keep this section in sync with the maintainer
# ruling before the sweep lands. Target version is fixed to the project's
# minimum supported Python (3.10) so the output is stable across the
# release matrix.
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.pytest_cache
  | build
  | dist
  | site-docs
  | trace
  | Workspace
  | YggdraSIM-data
  | yggdrasim\.egg-info
)/
'''

[tool.pytest.ini_options]
# ``slow`` quarantines long-running integration-style tests that exercise
# the pySim ASN.1 / SAIP decoder on production-sized UPPs. They are
# excluded from the default ``pytest`` run so the suite stays responsive
# on modest workstations, and opt-in via ``pytest --runslow`` when a full
# release validation is wanted (see tests/conftest.py).
markers = [
    "slow: opt-in marker for long-running profile-decode tests",
]
# Deterministic defaults for the pytest suite. Tests run in quiet mode
# with short tracebacks so a broken run cannot flood the terminal, and
# warnings are silenced because construct and cmd2 still emit
# DeprecationWarnings on Python 3.12+ that the project cannot influence.
# See site-docs/internals/testing-guide.md for the full testing policy
# (narrow targets, 90 s wall-time cap, redirected logs).
testpaths = ["tests"]
addopts = "-q --tb=short --disable-warnings --no-header"
filterwarnings = [
    "ignore::DeprecationWarning:construct",
    "ignore::DeprecationWarning:cmd2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "SCP03*",
    "SCP80*",
    "SCP11*",
    "SIMCARD*",
    "Tools*",
    "yggdrasim_common*",
]
